--- a/src/lib/styles/chapter-styles.scss
+++ b/src/lib/styles/chapter-styles.scss
@@ -164,13 +164,8 @@ nav .nav-items li.nav-chapter-group.chapter-10-theme {
   max-width: var(--wide-content-width);
 
   @media (max-width: variables.$breakpoint-md) {
-    padding: var(--space-m) var(--space-s); /* Reduced padding for medium screens */
+    padding: var(--space-m) var(--space-3xs); /* Reduced padding for medium screens */
     gap: var(--space-xl);
-  }
-
-  @media (max-width: variables.$breakpoint-sm) {
-    padding-inline: var(--space-xs); /* Further reduced horizontal padding for small screens */
-    gap: var(--space-l); /* Slightly reduced gap for smaller screens */
   }
 }
 
