Its alive! - finally got the drag controls working correctly - began adding styles for visualizations

--- a/src/lib/styles/chapter-styles.scss
+++ b/src/lib/styles/chapter-styles.scss
@@ -292,6 +292,12 @@ nav .nav-items li.nav-chapter-group.chapter-10-theme {
   margin-bottom: var(--space-l);
 }
 
+.subsection-title {
+  font-size: var(--step-1);
+  font-weight: bold;
+  text-wrap: balance;
+}
+
 .section-core {
   margin-bottom: var(--space-l);
 
